--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -55,6 +55,6 @@
     "globals": "^16.3.0",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.11",
-    "vite": "^7.1.4"
+    "vite":  "npm:rolldown-vite@7.1.14"
   }
 }
